--- a/api/package.json
+++ b/api/package.json
@@ -7,15 +7,23 @@
     "nodemon": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.7",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "^4.16.4",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "knex": "^0.20.8",
+    "morgan": "~1.9.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "pg": "^7.17.1",
+    "pg-promise": "^10.3.5"
   },
   "devDependencies": {
+    "express-session": "^1.17.0",
     "nodemon": "^2.0.2"
   }
 }
