--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.8",
     "morgan": "~1.9.1",
+    "nodemon": "^2.0.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -26,7 +27,6 @@
     "universal-cookie": "^4.0.3"
   },
   "devDependencies": {
-    "express-session": "^1.17.0",
-    "nodemon": "^2.0.2"
+    "express-session": "^1.17.0"
   }
 }
